# bofhle

./: .junie.toml  AGENTS.md  README.md  bofhle.txt  pyproject.toml
src/bofhle/: __init__.py  bofhle.py  cli.py  database.py
tests/: __init__.py  test_bofhle.py  test_cli.py  test_database.py  test_scoring.py
